--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1134,6 +1134,11 @@ video {
   padding-right: 0.375rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1147,11 +1152,6 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-48 {
-  padding-left: 12rem;
-  padding-right: 12rem;
 }
 
 .py-0\.5 {
@@ -1530,6 +1530,13 @@ input[type="search"]::-webkit-search-results-decoration {
 
   .xl\:hidden {
     display: none;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:px-48 {
+    padding-left: 12rem;
+    padding-right: 12rem;
   }
 }
 
