--- a/src/css/input.css
+++ b/src/css/input.css
@@ -50,11 +50,11 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   background: linear-gradient(90deg, rgba(24, 26, 27, 0.1), rgb(24, 26, 27) 17px);;
 }
 
-#nextBtn:hover ~ #slider > #inner-slider {
+.nextBtn:hover ~ .slider > .inner-slider {
   animation: slightScrollToRight 0.5s;
 }
 
-#prevBtn:hover ~ #slider > #inner-slider {
+.prevBtn:hover ~ .slider > .inner-slider {
   animation: slightScrollToLeft 0.5s;
 }
 
