--- a/src/css/output.css
+++ b/src/css/output.css
@@ -610,6 +610,10 @@ video {
   top: 46px;
 }
 
+.-right-0 {
+  right: -0px;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -645,8 +649,8 @@ video {
   margin-bottom: 3.5rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
 }
 
 .ml-5 {
@@ -663,10 +667,6 @@ video {
 
 .mr-2 {
   margin-right: 0.5rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
 }
 
 .mr-6 {
@@ -747,11 +747,6 @@ video {
   height: 2rem;
 }
 
-.size-\[170px\] {
-  width: 170px;
-  height: 170px;
-}
-
 .size-\[26px\] {
   width: 26px;
   height: 26px;
@@ -819,12 +814,12 @@ video {
   width: 13rem;
 }
 
-.w-\[15vw\] {
-  width: 15vw;
+.w-\[130px\] {
+  width: 130px;
 }
 
-.w-\[170px\] {
-  width: 170px;
+.w-\[15vw\] {
+  width: 15vw;
 }
 
 .w-\[25vw\] {
@@ -857,6 +852,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .shrink-0 {
@@ -1077,6 +1076,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
@@ -1134,19 +1138,9 @@ video {
   padding-right: 0.375rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -1159,8 +1153,17 @@ video {
   padding-bottom: 0.125rem;
 }
 
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
 }
 
 .pl-5 {
@@ -1179,13 +1182,29 @@ video {
   padding-top: 5rem;
 }
 
+.pr-20 {
+  padding-right: 5rem;
+}
+
+.pl-20 {
+  padding-left: 5rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pr-10 {
+  padding-right: 2.5rem;
+}
+
 .text-center {
   text-align: center;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-\[14px\] {
@@ -1248,6 +1267,10 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-transform {
@@ -1325,11 +1348,11 @@ input[type="search"]::-webkit-search-results-decoration {
   background: linear-gradient(90deg, rgba(24, 26, 27, 0.1), rgb(24, 26, 27) 17px);
 }
 
-#nextBtn:hover ~ #slider > #inner-slider {
+.nextBtn:hover ~ .slider > .inner-slider {
   animation: slightScrollToRight 0.5s;
 }
 
-#prevBtn:hover ~ #slider > #inner-slider {
+.prevBtn:hover ~ .slider > .inner-slider {
   animation: slightScrollToLeft 0.5s;
 }
 
@@ -1491,6 +1514,10 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 @media (min-width: 768px) {
+  .md\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -1498,9 +1525,43 @@ input[type="search"]::-webkit-search-results-decoration {
   .md\:hidden {
     display: none;
   }
+
+  .md\:size-\[170px\] {
+    width: 170px;
+    height: 170px;
+  }
+
+  .md\:w-\[170px\] {
+    width: 170px;
+  }
+
+  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .md\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:mr-5 {
+    margin-right: 1.25rem;
+  }
+
   .lg\:block {
     display: block;
   }
