--- a/src/css/output.css
+++ b/src/css/output.css
@@ -689,6 +689,18 @@ video {
   margin-top: 1.75rem;
 }
 
+.mb-96 {
+  margin-bottom: 24rem;
+}
+
+.mb-40 {
+  margin-bottom: 10rem;
+}
+
+.mb-32 {
+  margin-bottom: 8rem;
+}
+
 .line-clamp-1 {
   overflow: hidden;
   display: -webkit-box;
@@ -850,10 +862,6 @@ video {
   width: 100%;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -987,10 +995,6 @@ video {
 
 .whitespace-nowrap {
   white-space: nowrap;
-}
-
-.whitespace-pre {
-  white-space: pre;
 }
 
 .rounded-full {
@@ -1508,6 +1512,14 @@ input[type="search"]::-webkit-search-results-decoration {
     margin-bottom: 1.25rem;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -1539,6 +1551,14 @@ input[type="search"]::-webkit-search-results-decoration {
   .md\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
+  }
+
+  .md\:pl-0 {
+    padding-left: 0px;
+  }
+
+  .md\:pl-2 {
+    padding-left: 0.5rem;
   }
 
   .md\:text-3xl {
